# physical-ai-humanoid-robotics

./: .gitignore  ACCEPTANCE.md  FINAL_REPORT.md  README.md  test_retrieval_implementation.py  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: Dockerfile  pyproject.toml  requirements.txt  vercel.json
backend/api/: index.py
backend/src/: main.py
backend/src/agent/: README.md  __init__.py  api.py  cache.py  cli.py  config.py  context_fetcher.py  context_reasoner.py  core.py  logging.py  main.py  models.py  openrouter_client.py  rate_limiter.py  retrieval_tool.py  validation_utils.py
backend/src/embedding/: cohere_client.py  validation.py
backend/src/ingestion/: crawler.py  idempotent_ingestor.py
backend/src/models/: data_models.py
backend/src/retrieval/: cohere_client.py  config.py  logging.py  main.py  models.py  qdrant_searcher.py  retrieval_pipeline.py  validation_utils.py
backend/src/storage/: qdrant_client.py
backend/src/utils/: chunker.py  chunking.py  config.py  logging.py  sitemap_crawler.py  text_normalizer.py
docusaurus/: ACCEPTANCE_UI.md  CHATBOT_SETUP.md  README.md  docusaurus.config.ts  package-lock.json  sidebars.ts  tsconfig.json
docusaurus/docs/_templates/: chapter-template.md  comprehensive-module-plan.md  learning-outcomes-template.md  module10-outline.md  module2-outline.md  module3-outline.md  module4-outline.md  module5-outline.md  module6-outline.md  (+3 more)
tests/: test_agent_complete.py  test_agent_complex.py  test_agent_e2e.py  test_agent_low_confidence.py  test_agent_validation.py
(+158 files in other folders)
